--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: aliceblue;
 }
 
 nav {
     height: 15vh;
     width: 100%;
-    background: rgb(52,50,50);
-background: linear-gradient(90deg, rgba(52,50,50,1) 0%, rgba(73,78,79,1) 51%, rgba(52,50,50,1) 100%);
+    background: #000000;
+
     display: flex;
     justify-content: space-between;
 }
@@ -42,7 +43,7 @@ background: linear-gradient(90deg, rgba(52,50,50,1) 0%, rgba(73,78,79,1) 51%, rg
 .nav2 {
     width: 100%;
     height: 5vh;
-    background-color: aliceblue;
+    background-color: #F2A929;
     display: flex;
     justify-content: space-around;
 }
@@ -60,9 +61,9 @@ background: linear-gradient(90deg, rgba(52,50,50,1) 0%, rgba(73,78,79,1) 51%, rg
 }
 
 #login{
-border: 1px solid #fff;
+border: 1px solid #F2A929;
 padding: 5px;
-background-color: black;
+background-color: rgb(0, 0, 0);
 color: white;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 margin-right: 2vh;
@@ -73,7 +74,7 @@ border-radius: 8px;
     margin-right: 5vh;
     border: 1px solid black;
     padding: 5px;
-    background-color: white;
+    background-color: #F2A929;
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 8px;
@@ -85,13 +86,13 @@ border-radius: 8px;
 .slider {
     margin: 0 auto;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     overflow: hidden;
 }
 
 .slides {
     width: 400%;
-    height: 50vh;
+    height: 80vh;
     display: flex;
 }
 
@@ -106,7 +107,7 @@ border-radius: 8px;
 }
 
 .slide img {
-    height: 50vh;
+    height: 80vh;
     width: 100%;
 }
 
@@ -163,7 +164,7 @@ border-radius: 8px;
 .navigation-auto{
     position: absolute;
     width: 100%;
-    margin-top: 438px;
+    margin-top: 75.8vh;
     display: flex;
     justify-content: center;
 }
@@ -193,7 +194,7 @@ border-radius: 8px;
 #titulo {
     margin-left: 10vh;
     margin-top: 10vh;
-
+    font-size: 4.5vh;
 }
 
 
@@ -213,6 +214,7 @@ border-radius: 8px;
 
 .catalago img{
     width: 30vh;;
+    border-radius: 20px;
 }
 
 .catalago h4{
