--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,46 @@ a {
     transform: scale(1.15);
     transition: 1s;
 }
+
+#front {
+    height: 50vh;
+    width: 70vh;
+    border-radius: 20px;  
+}
+
+#back {
+    height: 50vh;
+    width: 70vh;
+    border-radius: 20px;  
+}
+
+.border {
+    position: relative;
+    left: 14%;
+    width: 141vh;
+    height: 77vh;
+    border: 4px solid black;
+    border-radius: 20px;   
+    margin-top: 10px;
+}
+
+.info {
+    position: relative;
+    left: 2%;
+}
+
+.info button {
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 4px;
+    width: 10vh;
+    height: 5vh;
+    cursor: pointer;
+}
+
+.info button:hover{
+    background-color: gray;
+    color: white;
+    
+}
